--- a/css/projectvgl.css
+++ b/css/projectvgl.css
@@ -1,3 +1,133 @@
+/* First Section */
+#first-section {
+  /* height: calc(100svh - 4.6875rem); */
+  box-sizing: border-box;
+}
+/* Background */
+.project-background {
+  width: 100%;
+}
+.project-background-img {
+  width: 100%;
+}
+/* Project Images */
+.section-images {
+  display: flex;
+  flex-direction: row;
+  gap: 10%;
+}
+.app-img {
+  padding: 1rem 0 1rem 0;
+  max-width: 100%;
+}
+.bigger-img {
+  width: 175%;
+}
+/* Second Section */
+#second-section {
+  height: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 9rem;
+  padding: 4rem 1rem 4rem 1rem;
+  justify-content: center;
+}
+/* Third Section */
+#third-section {
+  height: 100%;
+  padding: 0 1rem 6rem 1rem;
+}
+.preview-container {
+  padding: 1rem 0 0 0;
+  position: relative;
+}
+.preview {
+  width: 100%;
+  z-index: 2;
+  pointer-events: none;
+  position: relative;
+}
+.preview-screen {
+  max-width: 100%;
+  position: relative;
+}
+.scroll-container {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  animation: wiggle 0.5s ease-in-out infinite alternate;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.preview-content {
+  top: 4%;
+  bottom: 10%;
+  position: absolute;
+  z-index: 1;
+  width: 80%;
+  max-width: 980px;
+
+  overflow-y: auto;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.preview-content::-webkit-scrollbar {
+  display: none;
+}
+.full {
+  width: 100%;
+}
+.big {
+  width: 150%;
+}
+.half {
+  width: 50%;
+  border-radius: 0.625rem;
+  border: 4px solid #1d1d1f;
+  background: lightgray 50% / cover no-repeat;
+}
+/* Project Text */
+.project-text {
+  width: 45%;
+}
+.section-title {
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+.section-text {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+}
+.section-text p {
+  margin: 0;
+  padding: 1rem 0 3rem 0;
+}
+/* Project Info */
+.project-info {
+  display: flex;
+  gap: 2rem;
+  width: fit-content;
+}
+.project-info p {
+  margin: 0;
+}
+.info-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 0 3rem 0;
+}
+.info-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+}
+.info-content {
+  font-weight: 400;
+  font-size: 1.25rem;
+}
 /* General */
 html {
   scroll-behavior: smooth;
@@ -25,4 +155,82 @@ body {
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
   display: none;
+}
+
+@media (max-width: 900px) {
+  /* Background */
+  .project-background {
+  }
+  /* Img adjusting */
+  .section-images {
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .half {
+    width: 100%;
+  }
+  .bigger-img {
+    width: 100%;
+  }
+  /* Second Section */
+  #second-section {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .project-text {
+    width: 100%;
+  }
+  /* Font Adjusting */
+  .info-title,
+  .info-content {
+    font-size: 1rem;
+  }
+  .section-title {
+    font-size: 1.625rem;
+  }
+  .section-text {
+    font-size: 1.25rem;
+  }
+  /* Padding/Margin Adjusting */
+  .info-container {
+    gap: 0.625rem;
+    padding: 0 0 2rem 0;
+  }
+
+  /* Temporary Section Change so that it doesn't look ugly */
+  #first-section {
+    height: fit-content;
+  }
+  #second-section {
+    padding-top: 1rem;
+  }
+}
+@media (max-width: 1200px) {
+  .scroll-container {
+    left: 97.5%;
+  }
+}
+@media (max-width: 1800px) {
+  .scroll-container {
+    left: 97.5%;
+  }
+}
+@media (max-width: 660px) {
+  .preview-content {
+    top: 7%;
+  }
+}
+@media (max-width: 380px) {
+  .preview-content {
+    top: 8%;
+  }
+}
+@keyframes wiggle {
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
